--- a/app-protheus/src/app/pages/login/login.component.css
+++ b/app-protheus/src/app/pages/login/login.component.css
@@ -17,7 +17,10 @@ a, link{
 .title{
     width: 100%;
     text-align: center;
-    margin-bottom: 22px;
+    margin-bottom: 22px;    
+}
+.title h2, h4 {
+    text-align: center!important;
 }
 .title h4{
     color: var(--color08);
