adicionando serviço de listagem das sessões

--- a/app-protheus/src/app/pages/session/session.component.html
+++ b/app-protheus/src/app/pages/session/session.component.html
@@ -1,1 +1,19 @@
-<p>session works!</p>
+<div class="main">
+    <div class="conteiner">
+        <div class="body">
+
+                {{sessionList}}
+            <!-- <mat-nav-list>
+                <mat-list>
+                    @for (item of sessionList; track item) {
+                    <mat-list-item>
+                        <img matListItemAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="...">
+                        <h3 matListItemTitle [routerLink]="['/product/', item.name]">{{item.name}}</h3>
+                    </mat-list-item>
+                    }
+                </mat-list>
+            </mat-nav-list> -->
+        </div>
+    </div>
+</div>
+
